--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+email_validator==1.3.0
 Flask==2.2.2
+Flask_Bootstrap==3.3.7.1
+Flask_Login==0.6.2
 flask_sqlalchemy==3.0.2
+Flask_WTF==1.0.1
 requests==2.28.1
+Werkzeug==2.2.2
+WTForms==3.0.1
